# bocpy

./: .flake8  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  SUPPLY_CHAIN.md  export_module.py  pyproject.toml  setup.py
.github/: copilot-instructions.md  dependabot.yml
.github/actions/setup-bocpy-test/: action.yml
.github/agents/: adversarial-lens.agent.md  conservative-lens.agent.md  correctness-lens.agent.md  editor-lens.agent.md  security-lens.agent.md  speed-lens.agent.md  synthesis-lens.agent.md  usability-lens.agent.md
.github/skills/: commenting-c-and-python.md  testing-message-queue.md  testing-with-boc.md
.github/skills/branch-review/: SKILL.md
.github/skills/c-extensions-with-bocpy/: SKILL.md
.github/skills/commenting-c-and-python/: SKILL.md
.github/skills/finalize-pr/: SKILL.md
.github/skills/multi-perspective-plan/: SKILL.md
.github/skills/review-loop/: SKILL.md
.github/skills/testing-message-queue/: SKILL.md
.github/skills/testing-with-boc/: SKILL.md
.github/skills/thinking-in-boc/: SKILL.md
.github/skills/update-website/: SKILL.md  check_highlightjs.py
.github/skills/version-bump/: SKILL.md
.github/workflows/: build_wheels.yml  nightly_audit.yml  pr_gate.yml
ci/: constraints-audit.txt  constraints-cibw-bootstrap.txt  constraints-docs.txt  constraints-linting.txt  constraints-test.txt
docs/: index.html
docs/scripts/highlight/: DIGESTS.md  highlight.js  highlight.min.js
docs/sphinx/: .buildinfo  .buildinfo.bak  api.html  c_abi.html  genindex.html  index.html  messaging.html  noticeboard.html  objects.inv  pinned_cowns.html  py-modindex.html  sbom.html  search.html  searchindex.js
docs/sphinx/_sources/: api.rst.txt  index.rst.txt  noticeboard.rst.txt  sbom.rst.txt
examples/: README.md  __init__.py  bank.py  benchmark.py  boids.py  calculator.py  cooking_boc.py  cooking_threads.py  dining_philosophers.py  fanout_benchmark.py  fibonacci.py  prime_factor.py  primes.py  sketches.py
examples/assets/: cheese.txt  menu.txt
scripts/: _vendored_warehouse_wheel.py  bench_matrix.py  build_sbom.py  validate_sbom.py  validate_wheel.py
sphinx/source/: api.rst  c_abi.rst  conf.py  index.rst  messaging.rst  noticeboard.rst  pinned_cowns.rst  sbom.rst
src/boc/: __init__.py  __init__.pyi  _core.c  _math.c  behaviors.py  boc.c  transpiler.py  worker.py
src/bocpy/: __init__.py  __init__.pyi  _core.c  _core.pyi  _internal_test.c  _internal_test_atomics.c  _internal_test_bq.c  _internal_test_wsq.c  _math.c  behaviors.py  boc_compat.c  boc_compat.h  boc_cown.h  boc_noticeboard.c  boc_noticeboard.h  boc_registry.c  boc_registry.h  boc_sched.c  boc_sched.h  boc_tags.c  boc_tags.h  boc_terminator.c  boc_terminator.h  compat.c  compat.h  cown.h  noticeboard.c  noticeboard.h  sched.c  sched.h  tags.c  tags.h  terminator.c  terminator.h  transpiler.py  worker.py  xidata.h
src/bocpy/examples/: boids.py  cooking_boc.py  cooking_threads.py  dining_philosophers.py  fibonacci.py
src/bocpy/include/bocpy/: bocpy.h  bocpy_msvc.c  xidata.h
src/bocpy_test/: __init__.py  chained_global.py  collide_a.py  collide_b.py  dunders.py  module_binding.py  multiplier.py  philosophers.py
templates/: downstream-agent-bootstrap-prompt.md  launch.json
templates/c_abi_consumer/: README.md  pyproject.toml  setup.py
templates/c_abi_consumer/src/: _bocpy_probe.c
templates/c_abi_consumer/test/: test_consumer.py
test/: mockreplacement.py  test_boc.py  test_build_sbom.py  test_compat_atomics.py  test_internal_mpmcq.py  test_internal_wsq.py  test_matrix.py  test_message_queue.py  test_noticeboard.py  test_pinned_pump.py  test_public_c_abi.py  test_registry.py  test_scheduler_integration.py  test_scheduler_stats.py  test_scheduler_steal.py  test_scheduling_stress.py  test_send_receive.py  test_stop_retry_composition.py  test_transpiler.py  test_validate_sbom.py  test_validate_wheel.py  test_version.py
