[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bocpy"
version = "0.2.0"
authors = [
    {name = "bocpy Team", email="bocpy@microsoft.com"}
]
description = "bocpy is a Python extension that adds Behavior-oriented concurrency built on top of cross-interpreter data."
readme = "README.md"
keywords = ["behavior-oriented", "concurrency", "subinterpreters"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",

]

[project.urls]
homepage = "https://microsoft.github.io/bocpy/"
source = "https://github.com/microsoft/bocpy"
documentation = "https://microsoft.github.io/bocpy/docs"
issues = "https://github.com/microsoft/bocpy/issues"

[project.optional-dependencies]
test = ["pytest-md", "pytest-emoji", "pytest-cov", "pytest"]
linting = ["flake8", "flake8-bugbear", "flake8-builtins", "flake8-docstrings", "flake8-import-order", "flake8-quotes", "pep8-naming"]
docs = ["sphinx", "sphinx-autodoc-typehints", "enum-tools[sphinx]"]
boids = ["pyglet"]

[project.scripts]
bocpy-bank = "bocpy.examples.bank:main"
bocpy-boids = "bocpy.examples.boids:main"
bocpy-calculator = "bocpy.examples.calculator:main"
bocpy-cooking-boc = "bocpy.examples.cooking_boc:main"
bocpy-cooking-threads = "bocpy.examples.cooking_threads:main"
bocpy-dining-philosophers = "bocpy.examples.dining_philosophers:main"
bocpy-fibonacci = "bocpy.examples.fibonacci:main"
bocpy-primes = "bocpy.examples.primes:main"
bocpy-sketches = "bocpy.examples.sketches:main"

[tool.setuptools.package-data]
"bocpy.examples" = ["assets/*.txt"]
